--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 <body>
     <h1>This is git</h1>
     <h2>Git push</h2>
+    <h3>new heading</h3>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tenetur atque, fugit officiis pariatur vero deleniti nisi a aperiam! Dolor, facilis!</p>
     
 </body>
 </html>
