--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1>This is git push</h1>
-    <h2>Git push</h2>
+    <h2>Git push conflict-2</h2>
     <h3>new heading</h3>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tenetur atque, fugit officiis pariatur vero deleniti nisi a aperiam! Dolor, facilis!</p>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio incidunt dolores accusamus doloribus laboriosam sint similique molestias veniam, nemo quae animi vitae adipisci, modi ipsum. Placeat velit accusantium cum fugit!</p>
